<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>com.blockout</groupId>
    <artifactId>backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>backend</name>
    <description>Parent POM for BlockOut backend services</description>

    <modules>
        <module>shared-models</module>
        <module>clubs-service</module>
        <module>competition-service</module>
        <module>config-service</module>
        <module>matches-service</module>
        <module>mobile-gateway</module>
        <module>notification-service</module>
        <module>pools-service</module>
        <module>reports-service</module>
        <module>search-service</module>
        <module>search-worker</module>
        <module>teams-service</module>
        <module>users-service</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.38</lombok.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <springdoc-openapi.version>2.6.0</springdoc-openapi.version>
        <openapi-generator-maven-plugin.version>7.19.0</openapi-generator-maven-plugin.version>
        <build-helper-maven-plugin.version>3.6.1</build-helper-maven-plugin.version>
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <openapi.generated-sources.root>${project.build.directory}/generated-sources/openapi</openapi.generated-sources.root>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.blockout</groupId>
                <artifactId>shared-models</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                    <configuration>
                        <configOptions>
                            <useTags>true</useTags>
                            <useOneOfInterfaces>true</useOneOfInterfaces>
                            <openApiNullable>false</openApiNullable>
                            <legacyDiscriminatorBehavior>false</legacyDiscriminatorBehavior>
                        </configOptions>
                        <generateApiDocumentation>false</generateApiDocumentation>
                        <generateApiTests>false</generateApiTests>
                        <generateModelDocumentation>false</generateModelDocumentation>
                        <generateModelTests>false</generateModelTests>
                        <typeMappings>
                            <typeMapping>DateTime=Instant</typeMapping>
                        </typeMappings>
                        <importMappings>
                            <importMapping>Instant=java.time.Instant</importMapping>
                        </importMappings>
            <!-- BEGIN generated schemaMappings -->
            <schemaMappings>
              <schemaMapping>CalendarDate=java.time.LocalDate</schemaMapping>
              <schemaMapping>DevicePlatformEnum=com.blockout.shared.model.DevicePlatformEnum</schemaMapping>
              <schemaMapping>EntityTypeEnum=com.blockout.shared.model.EntityTypeEnum</schemaMapping>
              <schemaMapping>FormatEnum=com.blockout.shared.model.FormatEnum</schemaMapping>
              <schemaMapping>GenderEnum=com.blockout.shared.model.GenderEnum</schemaMapping>
              <schemaMapping>LiveLinkStatusEnum=com.blockout.shared.model.LiveLinkStatusEnum</schemaMapping>
              <schemaMapping>LiveProviderEnum=com.blockout.shared.model.LiveProviderEnum</schemaMapping>
              <schemaMapping>MatchStatusEnum=com.blockout.shared.model.MatchStatusEnum</schemaMapping>
              <schemaMapping>NotificationStatusEnum=com.blockout.shared.model.NotificationStatusEnum</schemaMapping>
              <schemaMapping>NotificationTargetTypeEnum=com.blockout.shared.model.NotificationTargetTypeEnum</schemaMapping>
              <schemaMapping>NotificationTypeEnum=com.blockout.shared.model.NotificationTypeEnum</schemaMapping>
              <schemaMapping>PageInfo=com.blockout.shared.model.PageInfo</schemaMapping>
              <schemaMapping>ProblemDetail=com.blockout.shared.model.ProblemDetail</schemaMapping>
              <schemaMapping>ReportTypeEnum=com.blockout.shared.model.ReportTypeEnum</schemaMapping>
              <schemaMapping>ScraperNameEnum=com.blockout.shared.model.ScraperNameEnum</schemaMapping>
              <schemaMapping>UtcDateTime=java.time.Instant</schemaMapping>
              <schemaMapping>UuidIdentifier=java.util.UUID</schemaMapping>
            </schemaMappings>
            <!-- END generated schemaMappings -->
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>${build-helper-maven-plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
